--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="profile_phone">Номер телефона</string>
     <string name="profile_email">Email</string>
     <string name="logout">Выйти</string>
+    <string name="not_data">Не заполнено</string>
 
 </resources>
