--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="edit_profile">Редактирование</string>
     <string name="save">Сохранить</string>
 
+    <!--Profile page-->
+    <string name="menu_toolbar">Меню</string>
+
 </resources>
