ProfileEditScreen - edit password

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="logout">Выйти</string>
     <string name="not_data">Не заполнено</string>
     <string name="edit_profile">Редактирование</string>
+    <string name="edit_password">Изменить пароль</string>
+    <string name="new_password">Новый пароль</string>
+    <string name="confirm_password">Подтверждение пароля</string>
     <string name="save">Сохранить</string>
 
 </resources>
