--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -52,5 +52,23 @@
     <string name="number_of_guests">Сколько гостей:</string>
     <string name="basket_description">Мы доставим палочки, салфетки и приправы.\nНа одну порцию роллов полагается: 30 мл Соевого соуса, 6 гр Васаби, 9 гр Имбиря.</string>
 
+    <!--Order page-->
+    <string name="order_toolbar">Оформление заказа</string>
+    <string name="delivery">Доставка</string>
+    <string name="deliver_on">Доставить:</string>
+    <string name="in_time">Ко времени</string>
+    <string name="pickup">Самовывоз</string>
+    <string name="order_continue">Продолжить</string>
+    <string name="commentary">Комментарий</string>
+    <string name="address">*Город, улица, дом</string>
+    <string name="entrance">Подъезд</string>
+    <string name="code">Код</string>
+    <string name="floor">Этаж</string>
+    <string name="apartment">Квартира / офис</string>
+    <string name="select_restaurant">Выберите ресторан</string>
+    <string name="order_email">*Email</string>
+    <string name="order_name">*Имя</string>
+    <string name="order_last_name">Фамилия</string>
+    <string name="order_phone">*Номер телефона</string>
 
 </resources>
